--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,6 @@ body {
 
 
 .fixed-top {
-    /* height: 85px;
-    margin-bottom: 40px; */
     box-sizing: border-box;
     height: 87px;
     position: relative;
@@ -20,6 +18,8 @@ body {
     border-bottom: solid 2px;
     border-color: #cccccc;
     overflow: auto;
+    width: 960px;
+    margin: auto;
 }
 
 /* content area */
@@ -27,7 +27,7 @@ body {
 .card {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 80px;
+    margin-top: 40px;
     border: solid 1px #cccccc;
     border-radius: 0px;
     padding: 20px;
@@ -118,7 +118,7 @@ h1 {
     line-height: 0;
     margin: 0;
     padding: 0;
-    bottom: 10px;
+    bottom: 20px;
     text-align: center;
     font-size: 12px;
     vertical-align: bottom;
