--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,39 @@ body {
     margin-bottom: 20px;
 }
 
+/* Contact Form */
+
+.form-control {
+    border-radius: 0;
+    border-color: #cccccc;
+}
+
+textarea.form-control {
+    height: 200px;
+    border-color: #cccccc;
+}
+
+.btn-primary {
+    background-color: #4aaaa5;
+    border: none;
+    color: white;
+    font-size: 16px;
+    padding: 10px 20px;
+    margin-top: 10px;
+    width: 120px;
+    height: 40px;
+    border-radius: 0px;
+}
+
+.btn-primary:hover {
+    background-color: #cccccc;
+}
+
+.btn-primary:active {
+    background-color: #cccccc;
+    color: #4aaaa5;
+}
+
 
 /* visual style */
 
