--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-
 .fixed-top {
     box-sizing: border-box;
     height: 87px;
@@ -35,10 +34,11 @@ body {
     max-width: 960px;
 }
 
-.profpic {
+.img-fluid {
     float: left;
     margin-right: 20px;
     margin-bottom: 20px;
+    height: auto;
 }
 
 /* Contact Form */
@@ -74,8 +74,32 @@ textarea.form-control {
     color: #4aaaa5;
 }
 
+/* Portfolio Images */
 
-/* visual style */
+.text {
+    display: inline-block;
+    width: 275px;
+    position: absolute;
+    left: 15px;
+    bottom: 10px;
+    padding-top: 10px;
+    color: white;
+    background-color: #4aaaa5;
+    text-align: center;
+    vertical-align: center;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 18px;
+}
+
+.top-buffer {
+    margin-top: 40px;
+}
+
+.right-buffer {
+    margin-right: 20px;
+}
+
+/* Visual Style */
 
 h1 {
     padding-bottom: 20px;
