--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,9 @@
 html,
 body {
     background-image: url("../../assets/images/grey_wash_wall.png");
+    height: 100%;
     position: relative;
-    height: auto;
+    width: 100%;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -70,8 +71,8 @@ textarea.form-control {
 }
 
 .btn-primary:active {
-    background-color: #cccccc;
-    color: #4aaaa5;
+    background-color: #cccccc !important;
+    color: #4aaaa5 !important;
 }
 
 /* Portfolio Images */
@@ -91,8 +92,8 @@ textarea.form-control {
     font-size: 18px;
 }
 
-.top-buffer {
-    margin-top: 40px;
+.bottom-buffer {
+    margin-bottom: 40px;
 }
 
 .right-buffer {
@@ -117,6 +118,7 @@ h1 {
     width: 270px;
     margin-top: 0px;
     margin-bottom: 0px;
+    margin-left: 0px;
     position: relative;
     top: 0px;
     left: 0px;
@@ -127,7 +129,7 @@ h1 {
     color: #ffffff;
     background-color: #4aaaa5;
     height: 85px;
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
 }
 
@@ -143,18 +145,9 @@ h1 {
 
 /* footer */
 
-.wrapper {
-    min-height: 100%;
-    margin: 0 auto -50px;
-}
-
-.footer,
-.push {
-    height: 50px;
-}
-
 .footer {
-    width: 100%;
+    position: relative;
+    width: auto;
     margin-top: 40px;
     bottom: 0;
     clear: both;
@@ -174,7 +167,7 @@ h1 {
     display: inline-block;
     position: relative;
     line-height: 0;
-    margin: 0;
+    margin: auto !important;
     padding: 0;
     bottom: 20px;
     text-align: center;
