--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+/* header */
+
 .fixed-top {
     box-sizing: border-box;
     height: 87px;
@@ -20,6 +22,39 @@ body {
     overflow: auto;
     max-width: 960px;
     margin: auto;
+}
+
+/* footer */
+
+.footer {
+    position: relative;
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: auto;
+    bottom: 0;
+    clear: both;
+    text-align: center;
+    background-color: #666666;
+    color: #ffffff;
+    font-size: 10px;
+    height: 50px;
+    line-height: 50px;
+    vertical-align: bottom;
+    border-top: solid 10px;
+    border-color: #4aaaa5;
+    display: block;
+}
+
+.copy {
+    display: inline-block;
+    position: relative;
+    line-height: 0;
+    margin: auto !important;
+    padding: 0;
+    bottom: 20px;
+    text-align: center;
+    font-size: 12px;
+    vertical-align: bottom;
 }
 
 /* content area */
@@ -143,34 +178,3 @@ h1 {
 }
 
 
-/* footer */
-
-.footer {
-    position: relative;
-    width: auto;
-    margin-top: 40px;
-    bottom: 0;
-    clear: both;
-    text-align: center;
-    background-color: #666666;
-    color: #ffffff;
-    font-size: 10px;
-    height: 50px;
-    line-height: 50px;
-    vertical-align: bottom;
-    border-top: solid 10px;
-    border-color: #4aaaa5;
-    display: block;
-}
-
-.copy {
-    display: inline-block;
-    position: relative;
-    line-height: 0;
-    margin: auto !important;
-    padding: 0;
-    bottom: 20px;
-    text-align: center;
-    font-size: 12px;
-    vertical-align: bottom;
-}
