--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 /* general */
 
+* {
+    margin: 0;
+}
+
 html,
 body {
     background-image: url("../../assets/images/grey_wash_wall.png");
@@ -8,6 +12,11 @@ body {
     width: 100%;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+body {
+    margin-bottom: 50px;
+    display: block;
 }
 
 /* header */
@@ -26,23 +35,27 @@ body {
 
 /* footer */
 
+.container{
+    width: auto;
+    max-width: 960px;
+    padding: 0 15px;
+}
+
 .footer {
-    position: relative;
-    width: 100%;
-    margin-top: 40px;
-    margin-bottom: auto;
+    position: absolute;
     bottom: 0;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+
+    position: absolute;
+    width: 100%;
     clear: both;
     text-align: center;
     background-color: #666666;
     color: #ffffff;
-    font-size: 10px;
-    height: 50px;
-    line-height: 50px;
-    vertical-align: bottom;
     border-top: solid 10px;
     border-color: #4aaaa5;
-    display: block;
 }
 
 .copy {
@@ -133,6 +146,29 @@ textarea.form-control {
 
 .right-buffer {
     margin-right: 20px;
+}
+
+/* Responsive Images */
+
+.imf-fluid {
+    max-height: 200px;
+    max-width: 270px;
+}
+
+.profpic {
+    max-height: 200px;
+    max-width: 250px;
+    height: auto;
+    width: auto;
+    margin-bottom: 0px;
+}
+
+.portfolio-item {
+    opacity: .5;
+}
+
+.portfolio-item:hover {
+    opacity: 1;
 }
 
 /* Visual Style */
